Fix: load flickering

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12,6 +12,9 @@ body {
   overflow-x: hidden;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
+}
+
+.bg {
   background: #8dd4f0;
 }
 
